# CrawlTTY

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SESSION.md  TODO.md  design.md
.githooks/: pre-commit  reference-transaction
docs/: ratatui-refactor.md
docs/superpowers/plans/: 2026-05-15-critical-hits.md  2026-05-15-sockets-and-gems.md  2026-05-15-town-gold-progression.md  2026-05-16-cursed-violet-cursor-pulse.md  2026-05-16-gothic-ui-palette.md  2026-05-16-inventory-grid-ui.md  2026-05-16-rarity-grid-outlines.md  2026-05-16-rogue-class.md  2026-05-17-equipment-slots.md  2026-05-17-help-screen.md  2026-05-17-inventory-character-equipment-panel.md  2026-05-17-inventory-gear-comparison.md  2026-05-17-multi-character-saves.md  2026-05-17-rogue-class-loot-implementation.md  2026-05-17-sorceress-class.md  2026-05-17-sorceress-mana-sustain.md
docs/superpowers/specs/: 2026-05-15-critical-hits-design.md  2026-05-15-sockets-and-gems-design.md  2026-05-15-town-gold-progression-design.md  2026-05-16-inventory-grid-ui-design.md  2026-05-16-rarity-grid-outlines-design.md  2026-05-16-rogue-class-design.md  2026-05-17-rogue-class-loot-design.md
scripts/: agent-commit-guard.sh
src/: classes.rs  dungeon.rs  dungeon_gen.rs  glyphs.rs  help.rs  input.rs  inventory.rs  items.rs  main.rs  model.rs  rogue.rs  save.rs  skills.rs  sorceress.rs  tests.rs  town.rs  town_projects.rs  ui.rs
