[package]
name = "crawltty"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
crossterm = "0.28"
ratatui = { version = "0.29", features = ["crossterm"] }

[dev-dependencies]
unicode-width = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
